--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,250 @@ a {
   text-decoration: none;
 }
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
+}
+
+#nprogress#nprogress .bar {
+  height: 8px;
+}
+
+#nprogress .spinner-icon {
+  width: 25px;
+  height: 25px;
+
+  border: solid 28px transparent;
+}
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__container {
+  background-image: linear-gradient(
+    270deg,
+    #f7a76f 0%,
+    #e55f55 49.99%,
+    #d34f94 100%
+  );
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__container--form {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  background-color: white;
+  max-width: 500px;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.2);
+}
+
+.form__container--form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__container--form form input {
+  border-radius: 5px;
+  height: 40px;
+  padding: 0 10px;
+  width: 60%;
+  font-size: 1.2rem;
+  border: 1px solid gray;
+}
+
+.button {
+  background-color: salmon;
+  padding: 10px 30px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  border: 2px solid rgb(224, 95, 81);
+  color: white;
+  font-weight: 600;
+  margin: 20px;
+  cursor: pointer;
+  transition: all 0.1s cubic-bezier(0.2, 0, 0.38, 0.9);
+}
+
+.button:hover {
+  box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+}
+
+.button:active {
+  transform: scale(1);
+  box-shadow: none;
+}
+
+.home {
+  min-height: 100vh;
+}
+
+.question__container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  padding-top: 80px;
+}
+
+.image__container {
+  max-width: 550px;
+  width: 90%;
+  max-height: 400px;
+  height: auto;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+.image__container img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  height: 100%;
+}
+
+.options__container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.option__button {
+  padding: 10px 25px;
+  background-color: rgb(204, 127, 127);
+  border-radius: 5px;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border: 2px solid rgb(139, 93, 93);
+  cursor: pointer;
+  margin: 10px;
+  transition: all 0.1s cubic-bezier(0.2, 0, 0.38, 0.9);
+}
+
+.option__button.option__button--next {
+  background-color: rgb(32, 207, 120);
+  border-color: rgb(53, 155, 104);
+}
+
+.option__button:hover {
+  box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+}
+
+.option__button:active {
+  transform: scale(1);
+  box-shadow: none;
+}
+
+.wrong {
+  pointer-events: none;
+  opacity: 0.7;
+  position: relative;
+}
+
+.wrong::after {
+  content: "+";
+  position: absolute;
+  opacity: 1;
+  transform: translate(-50%, -50%) rotate(45deg);
+  top: 45%;
+  left: 50%;
+  font-size: 3rem;
+  color: red;
+}
+
+.correct {
+  position: relative;
+  border-color: rgb(72, 228, 72);
+  color: rgb(72, 228, 72);
+}
+
+.result__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: linear-gradient(
+    to right,
+    #f7a76f 0%,
+    #e55f55 49.99%,
+    #d34f94 100%
+  );
+}
+
+.result__container--result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  background-color: white;
+  max-width: 500px;
+  padding: 40px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.2);
+}
+
+.result__container--result div {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  align-self: flex-start;
+}
+
+.result__container a {
+  background-color: salmon;
+  padding: 10px 30px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  border: 2px solid rgb(224, 95, 81);
+  color: white;
+  font-weight: 600;
+  margin: 20px;
+  transition: all 0.1s cubic-bezier(0.2, 0, 0.38, 0.9);
+}
+
+.result__container a:hover {
+  box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+}
+
+.result__container a:active {
+  transform: scale(1);
+  box-shadow: none;
+}
+
+.user__name {
+  font-weight: 600;
+}
+
+@media screen and (max-width: 500px) {
+  .question__container {
+    padding-top: 50px;
+  }
+  .option__button.option__button--next {
+    width: 85%;
+  }
+  .options__container {
+    flex-direction: column;
+    width: 90%;
+  }
 }
