--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,7 +117,7 @@ a {
   max-width: 550px;
   width: 90%;
   max-height: 400px;
-  height: auto;
+  height: 60vw;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   margin-bottom: 30px;
