--- a/styles/globals.css
+++ b/styles/globals.css
@@ -201,13 +201,81 @@ a {
   );
 }
 
+.result__info {
+  width: 90%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.play__count {
+  background-color: #ffffff;
+  padding: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  top: 4px;
+  position: relative;
+}
+
+.scores__container {
+  background-color: #ffffff;
+  position: relative;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background: transparent;
+}
+
+.scores__container button {
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-family: inherit;
+  position: relative;
+  top: -4px;
+  border: 1px solid #13719f;
+  cursor: pointer;
+  color: #13719f;
+  font-weight: 800;
+}
+
+.scores {
+  border-radius: 5px;
+  display: block;
+  padding: 20px;
+  position: absolute;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.2);
+  right: 10px;
+  width: 280px;
+  overflow-y: auto;
+  max-height: calc(50vh);
+}
+
+.scores li {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(214, 213, 213, 0.89);
+  padding: 4px 0;
+  color: rgb(53, 53, 53);
+}
+
+.scores li span:first-of-type {
+  padding-left: 2px;
+}
+
+.scores.hidden {
+  display: none;
+}
+
 .result__container--result {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 90%;
-  background-color: white;
+  background-color: #ffffff;
   max-width: 500px;
   padding: 40px;
   border-radius: 5px;
